--- a/src/frontend/registrazione.html
+++ b/src/frontend/registrazione.html
@@ -47,40 +47,7 @@
         </div>
     </div>
 
-    <script>
-        document.querySelector('button[type="button"]').addEventListener('click', async () => {
-            const email = document.getElementById('InputEmail').value;
-            const username = document.getElementById('InputName').value;
-            const password = document.getElementById('InputPassword').value;
-            const repeatPassword = document.getElementById('InputRepeatPassword').value;
-
-            if (password !== repeatPassword) {
-                alert('Le password non corrispondono');
-                return;
-            }
-
-            try {
-                const response = await fetch('/auth/register', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ email, username, password })
-                });
-
-                const data = await response.json();
-
-                if (response.ok) {
-                    window.location.href = 'dashboard'; // Or redirect to login
-                } else {
-                    alert(data.msg || 'Errore durante la registrazione');
-                }
-            } catch (error) {
-                console.error('Error:', error);
-                alert('Errore di connessione');
-            }
-        });
-    </script>
+    <script src="js/registrazione.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
