--- a/src/frontend/login.html
+++ b/src/frontend/login.html
@@ -41,33 +41,7 @@
         </div>
     </div>
 
-    <script>
-        document.querySelector('button[type="button"]').addEventListener('click', async () => {
-            const email = document.getElementById('InputUser').value;
-            const password = document.getElementById('InputPassword').value;
-
-            try {
-                const response = await fetch('/auth/login', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ email, password })
-                });
-
-                const data = await response.json();
-
-                if (response.ok) {
-                    window.location.href = 'dashboard';
-                } else {
-                    alert(data.msg || 'Errore durante il login');
-                }
-            } catch (error) {
-                console.error('Error:', error);
-                alert('Errore di connessione');
-            }
-        });
-    </script>
+    <script src="js/login.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
