Aggiunto pallino notifica

--- a/src/frontend/profile.html
+++ b/src/frontend/profile.html
@@ -127,6 +127,7 @@
     <script src="/js/profile/profile_api.js"></script>
     <script src="/js/profile/profile_ui.js"></script>
     <script src="/js/profile/profile.js" defer></script>
+    <script src="/js/notification.js"></script>
 
     <script>
         window.addEventListener('load', function() {
