--- a/src/frontend/dashboard.html
+++ b/src/frontend/dashboard.html
@@ -91,5 +91,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <script src="js/game_popup.js"></script>
+    <script src="/js/notification.js"></script>
 </body>
 </html>
