--- a/src/frontend/leaderboard.html
+++ b/src/frontend/leaderboard.html
@@ -22,7 +22,8 @@
 
 <body class="">
 
-    <div id="navbar"></div>
+     <div id="navbar"></div>
+
     <script>
         fetch("./utility/navbar.html")
             .then(response => response.text())
@@ -81,8 +82,10 @@
     </div>
 
     <!-- Scripts -->
+    <script src="/js/notification.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/leaderboard.js"></script>
+ 
 </body>
 
 </html>
