--- a/src/frontend/map.html
+++ b/src/frontend/map.html
@@ -48,6 +48,7 @@
     <script src="js/map.js" defer></script>
 
     <script src="js/game_popup.js"></script>
+    <script src="/js/notification.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
