--- a/src/frontend/admin_dashboard.html
+++ b/src/frontend/admin_dashboard.html
@@ -7,77 +7,80 @@
     <title>Admin Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/i18n.js"></script>
 </head>
 
 <body>
     <div class="container">
         <div class="dashboard-header">
-            <h1>Admin Dashboard</h1>
+            <h1 data-i18n="admin.title">Admin Dashboard</h1>
         </div>
 
         <div class="dashboard-grid">
             <!-- Add Place Card -->
             <section class="dashboard-card">
-                <h2>Add New Place</h2>
+                <h2 data-i18n="admin.add_place">Add New Place</h2>
                 <form id="add-place-form">
                     <div class="form-group">
-                        <label for="name">Name</label>
+                        <label for="name" data-i18n="admin.name">Name</label>
                         <input type="text" id="name" name="name" class="form-control" required>
                     </div>
                     <div class="form-group">
-                        <label for="sport">Sport</label>
+                        <label for="sport" data-i18n="admin.sport">Sport</label>
                         <select id="sport" name="sport" class="form-control" required>
-                            <option value="" disabled selected>Select a sport</option>
+                            <option value="" disabled selected data-i18n="profile.select_sport">Select a sport</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="lat">Latitude</label>
+                        <label for="lat" data-i18n="admin.lat">Latitude</label>
                         <input type="number" id="lat" name="lat" step="any" class="form-control" placeholder="46.0..."
                             required>
                     </div>
                     <div class="form-group">
-                        <label for="lng">Longitude</label>
+                        <label for="lng" data-i18n="admin.lng">Longitude</label>
                         <input type="number" id="lng" name="lng" step="any" class="form-control" placeholder="11.1..."
                             required>
                     </div>
-                    <button type="submit" class="btn btn-success" style="width: 100%;">Add Place</button>
+                    <button type="submit" class="btn btn-success" style="width: 100%;"
+                        data-i18n="admin.add_place_btn">Add Place</button>
                 </form>
             </section>
 
             <!-- Sports Management Card -->
             <section class="dashboard-card">
-                <h2>Existing Sports</h2>
+                <h2 data-i18n="admin.existing_sports">Existing Sports</h2>
 
                 <div style="margin-bottom: 2rem;">
-                    <h3>Add New Sport</h3>
+                    <h3 data-i18n="admin.add_new_sport">Add New Sport</h3>
                     <form id="add-sport-form" style="display: flex; gap: 0.5rem;">
                         <input type="text" id="sport-name" name="name" class="form-control" placeholder="Sport Name"
-                            required>
-                        <button type="submit" class="btn btn-primary">Add</button>
+                            data-i18n="admin.sport_name_placeholder" required>
+                        <button type="submit" class="btn btn-primary" data-i18n="admin.add_btn">Add</button>
                     </form>
                 </div>
 
                 <div>
-                    <h3>Existing Sports</h3>
+                    <h3 data-i18n="admin.existing_sports">Existing Sports</h3>
                     <ul id="sports-list" class="list-group">
                         <!-- Sports will be populated here -->
-                        <li class="list-item" style="justify-content: center; color: #999;">Loading...</li>
+                        <li class="list-item" style="justify-content: center; color: #999;" data-i18n="common.loading">
+                            Loading...</li>
                     </ul>
                 </div>
             </section>
         </div>
 
         <section class="dashboard-card">
-            <h2>Existing Places</h2>
+            <h2 data-i18n="admin.existing_places">Existing Places</h2>
             <div class="table-container">
                 <table class="data-table">
                     <thead>
                         <tr>
-                            <th>Name</th>
-                            <th>Sport</th>
-                            <th>Latitude</th>
-                            <th>Longitude</th>
-                            <th>Actions</th>
+                            <th data-i18n="admin.table_name">Name</th>
+                            <th data-i18n="admin.table_sport">Sport</th>
+                            <th data-i18n="admin.table_lat">Latitude</th>
+                            <th data-i18n="admin.table_lng">Longitude</th>
+                            <th data-i18n="admin.table_actions">Actions</th>
                         </tr>
                     </thead>
                     <tbody id="places-table-body">
@@ -87,19 +90,19 @@
             </div>
         </section>
         <section class="dashboard-card" style="margin-top: 2rem;">
-            <h2>Games List</h2>
+            <h2 data-i18n="admin.games_list">Games List</h2>
             <div class="table-container">
                 <table class="data-table">
                     <thead>
                         <tr>
-                            <th>Sport</th>
-                            <th>Place</th>
-                            <th>Date</th>
-                            <th>Time</th>
-                            <th>Creator</th>
-                            <th>Finished</th>
-                            <th>Participants</th>
-                            <th>Note</th>
+                            <th data-i18n="admin.table_sport">Sport</th>
+                            <th data-i18n="admin.table_name">Place</th>
+                            <th data-i18n="admin.table_date">Date</th>
+                            <th data-i18n="admin.table_time">Time</th>
+                            <th data-i18n="admin.table_creator">Creator</th>
+                            <th data-i18n="admin.table_finished">Finished</th>
+                            <th data-i18n="admin.table_participants">Participants</th>
+                            <th data-i18n="admin.table_note">Note</th>
                         </tr>
                     </thead>
                     <tbody id="games-table-body">
@@ -109,16 +112,16 @@
             </div>
         </section>
         <section class="dashboard-card" style="margin-top: 2rem;">
-            <h2>User Reports</h2>
+            <h2 data-i18n="admin.user_reports">User Reports</h2>
             <div class="table-container">
                 <table class="data-table">
                     <thead>
                         <tr>
-                            <th>Date</th>
-                            <th>Reporter</th>
-                            <th>Reported User</th>
-                            <th>Motivation</th>
-                            <th>Actions</th>
+                            <th data-i18n="admin.table_date">Date</th>
+                            <th data-i18n="admin.table_reporter">Reporter</th>
+                            <th data-i18n="admin.table_reported_user">Reported User</th>
+                            <th data-i18n="admin.table_motivation">Motivation</th>
+                            <th data-i18n="admin.table_actions">Actions</th>
                         </tr>
                     </thead>
                     <tbody id="reports-table-body">
@@ -128,16 +131,16 @@
             </div>
         </section>
         <section class="dashboard-card" style="margin-top: 2rem;">
-            <h2>Banned Users</h2>
+            <h2 data-i18n="admin.banned_users">Banned Users</h2>
             <div class="table-container">
                 <table class="data-table">
                     <thead>
                         <tr>
-                            <th>Username</th>
-                            <th>Motivation</th>
-                            <th>Ban Expiry</th>
-                            <th>Remaining Duration</th>
-                            <th>Actions</th>
+                            <th data-i18n="admin.table_username">Username</th>
+                            <th data-i18n="admin.table_motivation">Motivation</th>
+                            <th data-i18n="admin.table_ban_expiry">Ban Expiry</th>
+                            <th data-i18n="admin.table_remaining">Remaining Duration</th>
+                            <th data-i18n="admin.table_actions">Actions</th>
                         </tr>
                     </thead>
                     <tbody id="banned-users-table-body">
@@ -153,31 +156,32 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Edit Place</h5>
+                    <h5 class="modal-title" data-i18n="admin.edit_place_title">Edit Place</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form id="edit-place-form">
                         <input type="hidden" id="edit-place-id">
                         <div class="mb-3">
-                            <label for="edit-name" class="form-label">Name</label>
+                            <label for="edit-name" class="form-label" data-i18n="admin.name">Name</label>
                             <input type="text" class="form-control" id="edit-name" required>
                         </div>
                         <div class="mb-3">
-                            <label for="edit-sport" class="form-label">Sport</label>
+                            <label for="edit-sport" class="form-label" data-i18n="admin.sport">Sport</label>
                             <select class="form-control" id="edit-sport" required>
                                 <!-- Populated dynamically -->
                             </select>
                         </div>
                         <div class="mb-3">
-                            <label for="edit-lat" class="form-label">Latitude</label>
+                            <label for="edit-lat" class="form-label" data-i18n="admin.lat">Latitude</label>
                             <input type="number" class="form-control" id="edit-lat" step="any" required>
                         </div>
                         <div class="mb-3">
-                            <label for="edit-lng" class="form-label">Longitude</label>
+                            <label for="edit-lng" class="form-label" data-i18n="admin.lng">Longitude</label>
                             <input type="number" class="form-control" id="edit-lng" step="any" required>
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Save Changes</button>
+                        <button type="submit" class="btn btn-primary w-100" data-i18n="admin.save_changes">Save
+                            Changes</button>
                     </form>
                 </div>
             </div>
@@ -189,7 +193,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Ban User</h5>
+                    <h5 class="modal-title" data-i18n="admin.ban_user_title">Ban User</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -197,7 +201,7 @@
                         <input type="hidden" id="ban-user-id">
                         <p>Banning user: <strong id="ban-username-display"></strong></p>
                         <div class="mb-3">
-                            <label for="ban-duration" class="form-label">Duration</label>
+                            <label for="ban-duration" class="form-label" data-i18n="admin.ban_duration">Duration</label>
                             <select class="form-control" id="ban-duration" required>
                                 <option value="1d">1 Day</option>
                                 <option value="1w">1 Week</option>
@@ -206,10 +210,11 @@
                             </select>
                         </div>
                         <div class="mb-3">
-                            <label for="ban-reason" class="form-label">Reason</label>
+                            <label for="ban-reason" class="form-label" data-i18n="admin.ban_reason">Reason</label>
                             <input type="text" class="form-control" id="ban-reason" required>
                         </div>
-                        <button type="submit" class="btn btn-danger w-100">Ban User</button>
+                        <button type="submit" class="btn btn-danger w-100" data-i18n="admin.ban_confirm">Ban
+                            User</button>
                     </form>
                 </div>
             </div>
