--- a/src/frontend/leaderboard.html
+++ b/src/frontend/leaderboard.html
@@ -9,6 +9,7 @@
     <link href="/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/popup_shared.css">
     <script src="/js/popup_manager.js"></script>
+    <script src="/js/i18n.js"></script>
     <style>
         .leaderboard-img {
             width: 40px;
@@ -22,13 +23,14 @@
 
 <body class="">
 
-     <div id="navbar"></div>
+    <div id="navbar"></div>
 
     <script>
         fetch("./utility/navbar.html")
             .then(response => response.text())
             .then(data => {
                 document.getElementById("navbar").innerHTML = data;
+                if (window.i18n) window.i18n.translatePage();
             });
     </script>
 
@@ -37,23 +39,28 @@
             <div class="col-md-8">
                 <div class="card shadow-sm border-0">
                     <div class="card-body p-4">
-                        <h2 class="text-center fw-bold mb-4" style="color: rgb(223, 103, 5);">Classifica</h2>
+                        <h2 class="text-center fw-bold mb-4" style="color: rgb(223, 103, 5);"
+                            data-i18n="leaderboard.title">Classifica</h2>
 
                         <div class="d-flex justify-content-center mb-4">
                             <div class="btn-group" role="group" aria-label="Leaderboard Type">
                                 <input type="radio" class="btn-check" name="lbType" id="lbGlobal" autocomplete="off"
                                     checked>
-                                <label class="btn btn-outline-primary" for="lbGlobal">Global</label>
+                                <label class="btn btn-outline-primary" for="lbGlobal"
+                                    data-i18n="leaderboard.global">Global</label>
 
                                 <input type="radio" class="btn-check" name="lbType" id="lbFriends" autocomplete="off">
-                                <label class="btn btn-outline-primary" for="lbFriends">Friends</label>
+                                <label class="btn btn-outline-primary" for="lbFriends"
+                                    data-i18n="leaderboard.friends">Friends</label>
                             </div>
                         </div>
 
                         <div class="mb-4">
-                            <label for="sportFilter" class="form-label fw-bold">Seleziona Sport:</label>
+                            <label for="sportFilter" class="form-label fw-bold"
+                                data-i18n="leaderboard.select_sport">Seleziona Sport:</label>
                             <select id="sportFilter" class="form-select">
-                                <option value="" disabled selected>Caricamento sport...</option>
+                                <option value="" disabled selected data-i18n="leaderboard.loading_sports">Caricamento
+                                    sport...</option>
                             </select>
                         </div>
 
@@ -62,14 +69,17 @@
                                 <thead class="">
                                     <tr>
                                         <th scope="col" style="width: 10%;">#</th>
-                                        <th scope="col" style="width: 70%;">Giocatore</th>
-                                        <th scope="col" style="width: 20%;" class="text-end">ELO</th>
+                                        <th scope="col" style="width: 70%;" data-i18n="leaderboard.col_player">Giocatore
+                                        </th>
+                                        <th scope="col" style="width: 20%;" class="text-end"
+                                            data-i18n="leaderboard.col_elo">ELO</th>
                                     </tr>
                                 </thead>
                                 <tbody id="leaderboardTableBody">
                                     <!-- Rows will be populated by JS -->
                                     <tr>
-                                        <td colspan="3" class="text-center py-4 text-muted">Seleziona uno sport per
+                                        <td colspan="3" class="text-center py-4 text-muted"
+                                            data-i18n="leaderboard.select_sport_prompt">Seleziona uno sport per
                                             vedere la classifica</td>
                                     </tr>
                                 </tbody>
@@ -85,7 +95,7 @@
     <script src="/js/notification.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/js/leaderboard.js"></script>
- 
+
 </body>
 
 </html>
