--- a/src/frontend/map.html
+++ b/src/frontend/map.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/game_popup_participants.css">
     <link rel="stylesheet" href="css/popup_shared.css">
     <script src="js/popup_manager.js"></script>
+    <script src="js/i18n.js"></script>
     <style>
         #map {
             height: 100vh;
@@ -38,6 +39,7 @@
             .then(response => response.text())
             .then(data => {
                 document.getElementById("navbar").innerHTML = data;
+                if (window.i18n) window.i18n.translatePage();
             });
     </script>
 
