--- a/src/frontend/stats.html
+++ b/src/frontend/stats.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/i18n.js"></script>
 </head>
 
 <body>
@@ -15,16 +16,16 @@
         <div class="text-center mb-4">
             <img src="images/logo_TrentoArena.png" alt="TrentoArena Logo" style="width: 250px;">
         </div>
-        <h1 class="text-center mb-5">Game Statistics</h1>
+        <h1 class="text-center mb-5" data-i18n="stats.title">Game Statistics</h1>
 
         <div class="row mb-5">
             <!-- Games by Sport -->
             <div class="col-md-7">
                 <div class="dashboard-card h-100">
                     <div class="d-flex justify-content-between align-items-center mb-3">
-                        <h2 class="mb-0">Games played by Sport</h2>
+                        <h2 class="mb-0" data-i18n="stats.games_by_sport">Games played by Sport</h2>
                         <select id="sportSelect" class="form-select w-auto">
-                            <option value="" disabled selected>Select a Sport</option>
+                            <option value="" disabled selected data-i18n="stats.select_sport">Select a Sport</option>
                             <!-- Options populated by JS -->
                         </select>
                     </div>
@@ -36,11 +37,11 @@
             <div class="col-md-5">
                 <div class="dashboard-card h-100">
                     <div class="d-flex justify-content-between align-items-center mb-3">
-                        <h2 class="mb-0">Most Played Sports</h2>
+                        <h2 class="mb-0" data-i18n="stats.top_sports">Most Played Sports</h2>
                         <select id="topSportsPeriod" class="form-select w-auto">
-                            <option value="year" selected>Last Year</option>
-                            <option value="month">Last Month</option>
-                            <option value="all">All Time</option>
+                            <option value="year" selected data-i18n="stats.period_year">Last Year</option>
+                            <option value="month" data-i18n="stats.period_month">Last Month</option>
+                            <option value="all" data-i18n="stats.period_all">All Time</option>
                         </select>
                     </div>
                     <div class="card-body p-0">
@@ -57,9 +58,9 @@
             <div class="col-md-7">
                 <div class="dashboard-card h-100">
                     <div class="d-flex justify-content-between align-items-center mb-3">
-                        <h2 class="mb-0">Games played by Place</h2>
+                        <h2 class="mb-0" data-i18n="stats.games_by_place">Games played by Place</h2>
                         <select id="placeSelect" class="form-select w-auto">
-                            <option value="" disabled selected>Select a Place</option>
+                            <option value="" disabled selected data-i18n="stats.select_place">Select a Place</option>
                             <!-- Options populated by JS -->
                         </select>
                     </div>
@@ -71,11 +72,11 @@
             <div class="col-md-5">
                 <div class="dashboard-card h-100">
                     <div class="d-flex justify-content-between align-items-center mb-3">
-                        <h2 class="mb-0">Most Popular Places</h2>
+                        <h2 class="mb-0" data-i18n="stats.top_places">Most Popular Places</h2>
                         <select id="topPlacesPeriod" class="form-select w-auto">
-                            <option value="year" selected>Last Year</option>
-                            <option value="month">Last Month</option>
-                            <option value="all">All Time</option>
+                            <option value="year" selected data-i18n="stats.period_year">Last Year</option>
+                            <option value="month" data-i18n="stats.period_month">Last Month</option>
+                            <option value="all" data-i18n="stats.period_all">All Time</option>
                         </select>
                     </div>
                     <div class="card-body p-0">
